# coralmicro-out-of-tree-sample

./: .gitmodules  CMakeLists.txt  README.md  hello_world_cm7.cc  main.cc
.github/workflows/: coralmicro_submodule_update.yml
